# pachipachi-pakupaku-game

./: .gitignore  CMakeLists.txt  Makefile  README.md  cv.cpp  cv.hpp  face.cpp  item.cpp  main  main.cpp  main.hpp  memo.txt  mouth  mouth.cpp  todo.txt
